--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -13,6 +13,7 @@
 	"license": "GPL-3.0",
 	"private": true,
 	"dependencies": {
+		"@types/lodash": "^4.14.138",
 		"@types/react": "^16.9.2",
 		"@types/react-dom": "^16.9.0",
 		"@types/react-router": "^5.0.3",
