--- a/src/Montr.MasterData/Montr.MasterData.csproj
+++ b/src/Montr.MasterData/Montr.MasterData.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Montr.Kompany\Montr.Kompany.csproj" />
     <ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
     <ProjectReference Include="..\Montr.Web\Montr.Web.csproj" />
   </ItemGroup>
