--- a/src/Montr.Messages.Impl/Montr.Messages.Impl.csproj
+++ b/src/Montr.Messages.Impl/Montr.Messages.Impl.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="2.3.1.6" />
+    <PackageReference Include="Markdig" Version="0.17.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
     <PackageReference Include="Stubble.Core" Version="1.4.12" />
   </ItemGroup>
