--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -20,9 +20,11 @@
 		"@types/react-router-dom": "^5.1.0",
 		"antd": "^3.23.5",
 		"axios": "^0.19.0",
+		"i18next": "^17.0.18",
 		"oidc-client": "^1.9.1",
 		"react": "^16.10.1",
 		"react-dom": "^16.10.1",
+		"react-i18next": "^10.13.1",
 		"react-router": "^5.1.1",
 		"react-router-dom": "^5.1.1",
 		"universal-cookie": "^4.0.2"
