--- a/src/Montr.Core.Tests/Montr.Core.Tests.csproj
+++ b/src/Montr.Core.Tests/Montr.Core.Tests.csproj
@@ -6,11 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+    <PackageReference Include="Moq" Version="4.13.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Montr.Core.Impl\Montr.Core.Impl.csproj" />
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
   </ItemGroup>
 
