--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -35,6 +35,7 @@
 		"awesome-typescript-loader": "^5.2.1",
 		"babel-plugin-import": "^1.12.2",
 		"css-loader": "^3.2.0",
+		"hard-source-webpack-plugin": "^0.13.1",
 		"less": "^3.10.3",
 		"less-loader": "^5.0.0",
 		"source-map-loader": "^0.2.4",
