--- a/src/Host/Properties/launchSettings.json
+++ b/src/Host/Properties/launchSettings.json
@@ -21,13 +21,12 @@
 			"commandName": "Project",
 			"launchBrowser": true,
 			"launchUrl": "api/values",
-			"applicationUrl": "http://app.tendr.montr.io:5010;https://app.tendr.montr.io:5001/",
+			"applicationUrl": "http://app.montr.io:5010;https://app.montr.io:5001/",
 			"environmentVariables": {
 				"ASPNETCORE_ENVIRONMENT": "Development",
-				"COOKIE_DOMAIN": ".tendr.montr.io",
+				"COOKIE_DOMAIN": ".montr.io",
 				"AUTHORITY_APP_URL": "http://idx.montr.io:5050",
-				"PUBLIC_APP_URL": "http://tendr.montr.io:5010",
-				"PRIVATE_APP_URL": "http://app.tendr.montr.io:5010"
+				"APP_URL": "http://app.montr.io:5010"
 			}
 		}
 	}
