--- a/src/Host/Host.csproj
+++ b/src/Host/Host.csproj
@@ -35,6 +35,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Montr.Dokumento.Impl\Montr.Dokumento.Impl.csproj" />
     <ProjectReference Include="..\Montr.Dokumento\Montr.Dokumento.csproj" />
+    <ProjectReference Include="..\Montr.Idx.Impl\Montr.Idx.Impl.csproj" />
+    <ProjectReference Include="..\Montr.Idx\Montr.Idx.csproj" />
     <ProjectReference Include="..\Montr.Kompany.Impl\Montr.Kompany.Impl.csproj" />
     <ProjectReference Include="..\Montr.Kompany\Montr.Kompany.csproj" />
     <ProjectReference Include="..\Montr.Core.Impl\Montr.Core.Impl.csproj" />
