--- a/src/ui/.babelrc
+++ b/src/ui/.babelrc
@@ -1,5 +1,16 @@
-/* {
+{
+	"presets": [
+		"@babel/preset-react"
+	],
 	"plugins": [
-		[ "import", { "libraryName": "antd", "libraryDirectory": "es", "style": "less" } ]
+		"@babel/plugin-syntax-dynamic-import" /* ,
+		[
+			"import",
+			{
+				"libraryName": "antd",
+				"libraryDirectory": "es",
+				"style": "less"
+			}
+		] */
 	]
-} */
+}
