--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -34,6 +34,7 @@
 	"devDependencies": {
 		"awesome-typescript-loader": "^5.2.1",
 		"babel-plugin-import": "^1.12.2",
+		"copy-webpack-plugin": "^5.0.4",
 		"css-loader": "^3.2.0",
 		"hard-source-webpack-plugin": "^0.13.1",
 		"less": "^3.10.3",
@@ -41,6 +42,7 @@
 		"source-map-loader": "^0.2.4",
 		"style-loader": "^1.0.0",
 		"ts-import-plugin": "^1.6.1",
+		"ts-loader": "^6.2.1",
 		"typescript": "^3.6.4",
 		"webpack": "^4.41.2",
 		"webpack-bundle-analyzer": "^3.6.0",
