--- a/src/ui/tsconfig.json
+++ b/src/ui/tsconfig.json
@@ -6,6 +6,7 @@
 		],
 		"sourceMap": true,
 		"noImplicitAny": true,
+		// "strict": true,
 		// "strictFunctionTypes": true,
 		"allowSyntheticDefaultImports": true, // for i18next
 		"moduleResolution": "node",
@@ -28,7 +29,8 @@
 			]
 		}
 	},
-	"files": [],
+	/* "files": [
+	], */
 	"include": [
 		"modules/**/*"
 	],
