--- a/src/Montr.Idx.Impl/Montr.Idx.Impl.csproj
+++ b/src/Montr.Idx.Impl/Montr.Idx.Impl.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="linq2db.Identity" Version="2.0.1" />
     <PackageReference Include="linq2db.PostgreSQL" Version="2.9.2" />
     <PackageReference Include="MediatR" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
   </ItemGroup>
 
