--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -7,6 +7,7 @@
 		"start": "webpack --config webpack.dev.js --progress --watch",
 		"build-dev": "webpack --config webpack.dev.js",
 		"build-prod": "webpack --config webpack.prod.js",
+		"eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
@@ -40,10 +41,13 @@
 		"@types/react-dom": "^17.0.2",
 		"@types/react-router": "^5.1.12",
 		"@types/react-router-dom": "^5.1.7",
+		"@typescript-eslint/eslint-plugin": "^4.17.0",
+		"@typescript-eslint/parser": "^4.17.0",
 		"babel-loader": "^8.2.2",
 		"babel-plugin-import": "^1.13.3",
 		"copy-webpack-plugin": "^8.0.0",
 		"css-loader": "^3.6.0",
+		"eslint": "^7.22.0",
 		"fork-ts-checker-webpack-plugin": "^6.1.1",
 		"hard-source-webpack-plugin": "^0.13.1",
 		"kind-of": ">=6.0.3",
