--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ env:
   ConnectionStrings:Default: Server=localhost;Port=5432;Database=host;User Id=postgres;Password=secret;
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
-on: [push]
+on: [push, repository_dispatch]
 
 jobs:
   build:
