--- a/src/Montr.Idx.Impl/Montr.Idx.Impl.csproj
+++ b/src/Montr.Idx.Impl/Montr.Idx.Impl.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
     <ProjectReference Include="..\Montr.Idx\Montr.Idx.csproj" />
+    <ProjectReference Include="..\Montr.MasterData.Impl\Montr.MasterData.Impl.csproj" />
     <ProjectReference Include="..\Montr.Messages\Montr.Messages.csproj" />
   </ItemGroup>
 
