--- a/src/Montr.MasterData/Montr.MasterData.csproj
+++ b/src/Montr.MasterData/Montr.MasterData.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Montr.Kompany\Montr.Kompany.csproj" />
+    <ProjectReference Include="..\Montr.Idx\Montr.Idx.csproj" />
     <ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
   </ItemGroup>
 
