--- a/src/Montr.Tendr/Montr.Tendr.csproj
+++ b/src/Montr.Tendr/Montr.Tendr.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
+    <ProjectReference Include="..\Montr.Kompany\Montr.Kompany.csproj" />
     <ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
   </ItemGroup>
 
