--- a/src/Montr.Idx.Tests/Montr.Idx.Tests.csproj
+++ b/src/Montr.Idx.Tests/Montr.Idx.Tests.csproj
@@ -17,6 +17,7 @@
 	  <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
     <ProjectReference Include="..\Montr.Idx.Impl\Montr.Idx.Impl.csproj" />
     <ProjectReference Include="..\Montr.Idx\Montr.Idx.csproj" />
+    <ProjectReference Include="..\Montr.MasterData.Tests\Montr.MasterData.Tests.csproj" />
     <ProjectReference Include="..\Montr.Messages.Impl\Montr.Messages.Impl.csproj" />
   </ItemGroup>
 
