--- a/src/Montr.Kompany.Tests/Montr.Kompany.Tests.csproj
+++ b/src/Montr.Kompany.Tests/Montr.Kompany.Tests.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Montr.Docs.Impl\Montr.Docs.Impl.csproj" />
+    <ProjectReference Include="..\Montr.Idx.Impl\Montr.Idx.Impl.csproj" />
+    <ProjectReference Include="..\Montr.Idx.Tests\Montr.Idx.Tests.csproj" />
     <ProjectReference Include="..\Montr.Kompany.Impl\Montr.Kompany.Impl.csproj" />
     <ProjectReference Include="..\Montr.Kompany.Registration\Montr.Kompany.Registration.csproj" />
     <ProjectReference Include="..\Montr.Kompany\Montr.Kompany.csproj" />
