--- a/src/Montr.Docs/Montr.Docs.csproj
+++ b/src/Montr.Docs/Montr.Docs.csproj
@@ -9,6 +9,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\Montr.Automate\Montr.Automate.csproj" />
 		<ProjectReference Include="..\Montr.Kompany\Montr.Kompany.csproj" />
 		<ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
 		<ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
