--- a/src/Montr.Docs.Impl/Montr.Docs.Impl.csproj
+++ b/src/Montr.Docs.Impl/Montr.Docs.Impl.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
     <ProjectReference Include="..\Montr.Docs\Montr.Docs.csproj" />
     <ProjectReference Include="..\Montr.MasterData.Impl\Montr.MasterData.Impl.csproj" />
+    <ProjectReference Include="..\Montr.Worker\Montr.Worker.csproj" />
   </ItemGroup>
 
   <ItemGroup>
