--- a/src/Montr.Tasks.Impl/Montr.Tasks.Impl.csproj
+++ b/src/Montr.Tasks.Impl/Montr.Tasks.Impl.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
       <ProjectReference Include="..\Montr.Tasks\Montr.Tasks.csproj" />
     </ItemGroup>
 
