--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
 
       - uses: actions/setup-dotnet@v1.8.2
         with:
-          dotnet-version: '5.0.100'
+          dotnet-version: '6.x'
 
       - run: dotnet build ./src/Montr.sln
 
