--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -15,7 +15,7 @@
 	"private": true,
 	"dependencies": {
 		"ansi-regex": ">=5.0.1",
-		"antd": "4.17",
+		"antd": "^4.17.1",
 		"axios": "^0.24.0",
 		"i18next": "^21.5.2",
 		"i18next-browser-languagedetector": "^6.1.2",
