--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -1,14 +1,14 @@
 ﻿{
 	"Montr.Core.AppOptions": {
-		"AppUrl": "https://app.montr.io:5001",
+		// "AppUrl": "https://app.montr.io:5001",
 		// "CookieDomain": "app.montr.io"
 		"ClientUrls": [
-			"http://app.montr.io:5000",
-			"https://app.montr.io:5001",
-			"http://localhost:5000",
-			"https://localhost:5001",
-			"http://127.0.0.1:5000",
-			"https://127.0.0.1:5001"
+		  "https://127.0.0.1:5001",
+		  "http://127.0.0.1:5002",
+		  "https://app.montr.io:5001",
+		  "http://app.montr.io:5002",
+		  "http://localhost:5002",
+		  "https://localhost:5001"
 		]
 	},
 	"Montr.Core.MigrationOptions": {
