--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -15,15 +15,15 @@
 	"private": true,
 	"dependencies": {
 		"ansi-regex": ">=5.0.1",
-		"antd": "^4.19.2",
+		"antd": "^4.19.4",
 		"axios": "^0.26.1",
 		"i18next": "^21.6.14",
-		"i18next-browser-languagedetector": "^6.1.3",
+		"i18next-browser-languagedetector": "^6.1.4",
 		"i18next-xhr-backend": "^3.2.2",
 		"oidc-client": "^1.11.5",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-i18next": "^11.16.1",
+		"react-i18next": "^11.16.2",
 		"react-router": "^5.2.1",
 		"react-router-dom": "^5.3.0",
 		"universal-cookie": "^4.0.4"
@@ -38,26 +38,26 @@
 		"@babel/preset-react": "^7.16.7",
 		"@babel/preset-typescript": "^7.16.7",
 		"@types/lodash": "^4.14.180",
-		"@types/react": "^17.0.41",
+		"@types/react": "^17.0.43",
 		"@types/react-dom": "^17.0.14",
 		"@types/react-router": "^5.1.18",
 		"@types/react-router-dom": "^5.3.3",
-		"@typescript-eslint/eslint-plugin": "^5.15.0",
-		"@typescript-eslint/parser": "^5.15.0",
-		"babel-loader": "^8.2.3",
+		"@typescript-eslint/eslint-plugin": "^5.16.0",
+		"@typescript-eslint/parser": "^5.16.0",
+		"babel-loader": "^8.2.4",
 		"babel-plugin-import": "^1.13.3",
 		"copy-webpack-plugin": "^10.2.4",
 		"css-loader": "^6.7.1",
-		"eslint": "^8.11.0",
+		"eslint": "^8.12.0",
 		"fork-ts-checker-webpack-plugin": "^7.2.1",
 		"hard-source-webpack-plugin": "^0.13.1",
 		"kind-of": ">=6.0.3",
 		"less": "^4.1.2",
 		"less-loader": "^10.2.0",
-		"minimist": ">=0.2.1",
+		"minimist": "^1.2.6",
 		"source-map-loader": "^3.0.1",
 		"style-loader": "^3.3.1",
-		"typescript": "^4.6.2",
+		"typescript": "^4.6.3",
 		"webpack": "^5.70.0",
 		"webpack-bundle-analyzer": "^4.5.0",
 		"webpack-cli": "^4.9.2",
