--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -1,14 +1,14 @@
 ﻿{
   "Montr.Core.AppOptions": {
-	// "AppUrl": "https://app.montr.io:5001",
-	// "CookieDomain": "app.montr.io"
+	"AppUrl": "https://127.0.0.1:5001",
+	// "CookieDomain": "app.montr.io",
 	"ClientUrls": [
 	  "https://127.0.0.1:5001",
 	  "http://127.0.0.1:5002",
 	  "https://app.montr.io:5001",
 	  "http://app.montr.io:5002",
-	  "http://localhost:5002",
-	  "https://localhost:5001"
+	  "https://localhost:5001",
+	  "http://localhost:5002"
 	]
   },
   "Montr.Core.MigrationOptions": {
