--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -37,6 +37,7 @@
 		"@babel/preset-react": "^7.18.6",
 		"@babel/preset-typescript": "^7.18.6",
 		"@types/lodash": "^4.14.186",
+		"@types/node": "^18.11.8",
 		"@types/react": "^18.0.24",
 		"@types/react-dom": "^18.0.8",
 		"@types/react-router": "^5.1.19",
