--- a/src/Montr.Settings.Tests/Montr.Settings.Tests.csproj
+++ b/src/Montr.Settings.Tests/Montr.Settings.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -12,14 +12,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Montr.Core.Impl\Montr.Core.Impl.csproj" />
 		<ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<None Update="appsettings.json">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
+		<ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
+		<ProjectReference Include="..\Montr.Settings\Montr.Settings.csproj" />
 	</ItemGroup>
 
 </Project>
