--- a/src/Montr.Settings/Montr.Settings.csproj
+++ b/src/Montr.Settings/Montr.Settings.csproj
@@ -9,7 +9,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="linq2db" Version="3.7.0" />
 	  <PackageReference Include="MediatR" Version="11.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
+	  <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
 	</ItemGroup>
 
 </Project>
