--- a/src/Montr.Automate/Montr.Automate.csproj
+++ b/src/Montr.Automate/Montr.Automate.csproj
@@ -6,7 +6,9 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
+      <ProjectReference Include="..\Montr.MasterData.Impl\Montr.MasterData.Impl.csproj" />
       <ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
+      <ProjectReference Include="..\Montr.Messages\Montr.Messages.csproj" />
       <ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
     </ItemGroup>
 
