--- a/src/Montr.Tasks/Montr.Tasks.csproj
+++ b/src/Montr.Tasks/Montr.Tasks.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Montr.Automate\Montr.Automate.csproj" />
       <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
+      <ProjectReference Include="..\Montr.Idx\Montr.Idx.csproj" />
       <ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
     </ItemGroup>
 
