--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,12 @@ jobs:
         with:
           dotnet-version: '7.x'
 
+      # Initializes the CodeQL tools for scanning.
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: ${{ matrix.language }}
+
       - run: dotnet build ./src/Montr.sln
 
       - run: dotnet test ./src/Montr.Core.Tests
@@ -59,3 +65,6 @@ jobs:
         working-directory: ./src/ui
         env:
           CI: true
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
