--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,16 @@ on: [push, repository_dispatch]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'csharp', 'typescript', 'javascript' ]
 
     env:
       DOTNET_NOLOGO: true
@@ -43,6 +51,9 @@ jobs:
 
       - run: dotnet build ./src/Montr.sln
 
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
+
       - run: dotnet test ./src/Montr.Core.Tests
       - run: dotnet test ./src/Montr.Automate.Tests
       - run: dotnet test ./src/Montr.Metadata.Tests
@@ -65,6 +76,3 @@ jobs:
         working-directory: ./src/ui
         env:
           CI: true
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
