--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -14,6 +14,7 @@
 	"license": "AGPL-3.0",
 	"private": true,
 	"dependencies": {
+		"@ant-design/pro-components": "^2.3.34",
 		"ansi-regex": ">=5.0.1",
 		"antd": "^5.0.0",
 		"axios": "^1.1.3",
