--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -16,8 +16,9 @@
 	"dependencies": {
 		"@ant-design/pro-components": "^2.3.34",
 		"ansi-regex": ">=5.0.1",
-		"antd": "^5.0.0",
+		"antd": "^5.0.1",
 		"axios": "^1.1.3",
+		"dayjs": "^1.11.6",
 		"i18next": "^22.0.6",
 		"i18next-browser-languagedetector": "^7.0.1",
 		"i18next-xhr-backend": "^3.2.2",
