--- a/src/ui/.babelrc
+++ b/src/ui/.babelrc
@@ -6,23 +6,6 @@
 		"@emotion/babel-preset-css-prop"
 	],
 	"plugins": [
-		"@babel/plugin-proposal-class-properties",
-		"@babel/plugin-proposal-optional-chaining",
-		"@babel/plugin-proposal-nullish-coalescing-operator",
-		"@babel/plugin-syntax-dynamic-import",
-		[
-			"@babel/plugin-transform-runtime",
-			{
-				"regenerator": true
-			}
-		],
-		[
-			"import",
-			{
-				"libraryName": "antd",
-				"libraryDirectory": "es",
-				"style": true
-			}
-		]
+		"@babel/plugin-transform-runtime"
 	]
 }
