--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ env:
   ConnectionStrings:Default: Server=localhost;Port=5432;Database=host;User Id=postgres;Password=secret;
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
-on: [push, repository_dispatch]
+on: [ push, repository_dispatch ]
 
 jobs:
   build:
@@ -16,8 +16,8 @@ jobs:
 
     strategy:
       fail-fast: false
-      matrix:
-        language: [ 'csharp', 'typescript', 'javascript' ]
+      # matrix:
+      #   language: [ 'csharp', 'typescript', 'javascript' ]
 
     env:
       DOTNET_NOLOGO: true
@@ -44,15 +44,15 @@ jobs:
           dotnet-version: '7.x'
 
       # Initializes the CodeQL tools for scanning.
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
-        with:
-          languages: ${{ matrix.language }}
+      # - name: Initialize CodeQL
+      #   uses: github/codeql-action/init@v2
+      #   with:
+      #     languages: ${{ matrix.language }}
 
       - run: dotnet build ./src/Montr.sln
 
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
+      # - name: Perform CodeQL Analysis
+      #   uses: github/codeql-action/analyze@v2
 
       - run: dotnet test ./src/Montr.Core.Tests
       - run: dotnet test ./src/Montr.Automate.Tests
